--- a/index.html
+++ b/index.html
@@ -80,7 +80,14 @@
         document.getElementById("language").append(liff.getLanguage())
         document.getElementById("version").append(liff.getVersion())
         document.getElementById("accessToken").append(liff.getAccessToken())
-        document.getElementById("isInClient").append(liff.getIsInClient())
+        document.getElementById("isInClient").append(liff.isInClient())
+        if (liff.isInClient()) {
+            document.getElementById("btnLogOut").style.display = "none"
+        } else {
+            document.getElementById("btnMsg").style.display = "none"
+            document.getElementById("btnScanCode").style.display = "none"
+            document.getElementById("btnClose").style.display = "none"
+        }
     }
 
     async function main() {
