--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     }
 
     async function scanCode() {
+        const result = await liff.scanCode()
+        document.getElementById("scanCode").append(result.value)
     }
 
     function openWindow() {
@@ -113,6 +115,7 @@
         document.getElementById("version").append(liff.getVersion())
         document.getElementById("accessToken").append(liff.getAccessToken())
         document.getElementById("isInClient").append(liff.isInClient())
+        // document.getElementById("isloggedIn").append(liff.isloggedIn())
         if (liff.isInClient()) {
             document.getElementById("btnLogOut").style.display = "none"
         } else {
