--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@
     }
 
     async function shareMsg() {
+        await liff.shareTargetPicker(
+            {
+                "type":"text",
+                "text":"This message send by shareTargetPicker"
+            }
+        )
     }
 
     function logOut() {
+        liff.logout()
+        window.location.reload()
     }
 
     function closed() {
